# bulletin-bot

./: .gitignore  Cargo.toml  LICENSE  sqlx-data.json
.github/workflows/: simple.yml
.sqlx/: query-055dfadf5f9f3b857e40ccee5aa75a680470f6bbb9fe462ee1d93fc70f8ff315.json  query-0fbe53a461600adc23fee753657ea182702cc39d0e4e64e6c32a359a97a597ce.json  query-10aa5f2ce2d9224ddd5d644a9d73272902465e23794e6be681891c0fa93ca8e7.json  query-1af64fe79ffff017999b768053c48820681c13ec2681c75402ec6d36e81b8acf.json  query-1afc7255d0c1a33843dc9f3d22f5671805c3a6aa86100116e602dd0e1928278f.json  query-1eb5b780ded996bb43dd041cbe19f4015f2d06dc73d2e98246bc542f12a50c4c.json  query-2b92cca7c070c1217147feb3e44536f5167b9ae435c985185015943537d9cbdc.json  query-3b3877acebdc774839c9e120c90bd76a94ba7acbbdc87c630a57598321722b79.json  query-49d85f7b49a776276170a3f4fe7369ac481f48f1fc06f6b17b0cd87de4b68801.json  query-5ca788f37b2cf4a1d66931937afaee6953c183b976f384adf3cf4c432cb2b5ab.json  query-5dd9611f6ef78b2d3b86c62b24f4bb272c7afc83630b7568597549222be7e879.json  query-66d414efe3fb304226b100e9f6d98fb86dd8684cd2abe8ac57b2d4abf3146bdb.json  query-699bc752e15080f793eb176374f181229fe2d4db6293504c38ff78c9912c9cad.json  query-731a8a53735a9f768547dcf3f510314b799ba15c302418bd25deb50a3f668059.json  query-88d588dd1bdf56d9e312248e27a3d4a4281905cc898345b1bad910bc08928afc.json  query-9f4547d95e10e241a2eb592cd86a314d3ff36fbabfc279fb775e78431a908f37.json  query-b40ff7d3004ad99b4d199ec575ecda3f93e735bd667d5f7141fad802385c376e.json  query-bd6e8bdeb2803d792ac71ca061c29ce79da130ac3dfebadd8e0522a4e847c4f1.json  query-c3869a9aa3a5cc48558f84bbc0f8de64431f7eb1d13d816ed6c786918525cbc4.json  query-e4b8beb8fee5e8b64f723879b700402e9a6090f304ac744727e2b9d78a588590.json  query-e502cd4b6ca50e373ec42cdbe706a1ccd18dc8bf235e5621aed07e9a592039bc.json  query-e739f377e50d5f577f143400975ba0e68289e4e74dc3b8fd85b5668d6e5384b2.json
migrations/: 01_init.sql  02_add_column_to_admins.sql  03_add_bot_info.sql  04_add_admin_constraints.sql  05_add_template.sql  06_tags.sql  07_unique_bot_token.sql  08_add_invite_link.sql  09_add_flags.sql  10_banned_users.sql
src/: fsm.rs  impls.rs  main.rs  main_old.rs  persistent.rs
src/bots/: mod.rs
src/bots/bulletin/: ad.rs  bot.rs  config.rs  entity.rs  fsm.rs  impls.rs  mod.rs
src/bots/father/: entity.rs  fsm.rs  mod.rs
src/persistent/: mod.rs  sqlite.rs
src/res/: mod.rs
(+5 files in other folders)
