[package]
name = "bulletin-bot"
version = "0.2.0"
authors = ["Serge Barinov <bool.rus@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "sync"]}
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "offline"] }

log = "0.4"
simplelog = "0.12"

num-format = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
crossbeam = "0.8"
chrono = "0.4"
postcard = "1.0"
base91 = "0.1"
futures-util = "0.3"
clap = { version = "4.0.26", features = ["derive", "env"] }
ctor = "0.1.26"
anyhow = "1.0.68"
