[package]
name = "bulletin-bot"
version = "0.2.3"
authors = ["Serge Barinov <bool.rus@gmail.com>"]
edition = "2021"

[profile.release]
strip = true

[dependencies]
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "sync"]}
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler", "rustls", "throttle"], default-features = false }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "offline"] }

log = "0.4"
simplelog = "0.12"

num-format = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
crossbeam = "0.8"
chrono = "0.4"
postcard = "1.0"
base91 = "0.1"
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
ctor = "0.2"
anyhow = "1"
